[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/graphics/WalkingEnemy.png" type="Texture" id=2]
[ext_resource path="res://Enemies/WalkingEnemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 6 )

[node name="WalkingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
flip_h = true
hframes = 2

[node name="Collider" parent="." index="1"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="FloorRear" type="RayCast2D" parent="." index="3"]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="FloorFront" type="RayCast2D" parent="." index="4"]
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="WallFront" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="WallRear" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( -6, 0 )
